Added the css file.

--- a/C4_GitUnderstanding.html
+++ b/C4_GitUnderstanding.html
@@ -2,20 +2,33 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Git Understanding</title>
+<link rel="stylesheet" href="w3.css">
 </head>
 <body>
 	<b></b>
 <h3>Basics of Git</h3>
 <p>
-	Files in GitHub can be in any of the following three states:
+	<h4>Files in GitHub can be in any of the following three states:</h4>
 <ol>
 <li>Modified: In this state, modifications are made to a file or files, and the changes are still on our local system.
 
-<li>Staged: In this stage, the changed files are added to the the staging area, which means the files will now become a part of your development history.
+<li>Staged: In this stage, the changed files are added to the the staging area, which means the files will now become a part of your development history.</li>
 
-<li>Committed: In this stage, we make a record or take a snapshot of the files we have added to the staging area or our development history.
+<li>Committed: In this stage, we make a record or take a snapshot of the files we have added to the staging area or our development history.</li>
+</li>
+</ol>
 </p>
+<p>
+	<h4>Pushing to Remote</h4>
+	Use git push to push commits made on your local branch to a remote repository.
+	The git push command takes two arguments:
+	<ul>
+		<li>REMOTENAME</li>
+		<li>BRANCHNAME</li>
+	</ul>
+	<span>git push  REMOTENAME BRANCHNAME</span>
+</p>	
 
 </body>
 </html>
